# PAPERY

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
backend/: .env.example  Makefile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/configs/: __init__.py  admin.py  app.py  cors.py  email.py  oauth.py  stripe.py
backend/app/core/: __init__.py  security.py
backend/app/extensions/: ext_database.py  ext_minio.py  ext_redis.py
backend/app/infra/: __init__.py
backend/app/libs/: __init__.py
backend/app/middleware/: __init__.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  ai_job.py  base.py  project.py  rate_limit_rule.py  system_setting.py  tier.py  usage_tracking.py  user.py
backend/app/repositories/: __init__.py  ai_job_repository.py  base.py  oauth_account_repository.py  project_invite_repository.py  project_member_repository.py  project_repository.py  rate_limit_rule_repository.py  system_setting_repository.py  tier_repository.py  usage_tracking_repository.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: create_first_superuser.py  seed_rate_limits.py  seed_settings.py  seed_tiers.py
backend/tests/: conftest.py  test_admin_rate_limits.py  test_admin_settings.py  test_admin_tiers.py  test_admin_users.py  test_ai_job_flow.py  test_app.py  test_auth_routes.py  test_auth_schemas.py  test_auth_service.py  test_change_password.py  test_config.py  test_exceptions.py  test_health.py  test_models.py  test_oauth.py  test_password_reset.py  test_project_acl.py  test_project_invites.py  test_project_listing.py  test_project_members.py  test_projects.py  test_quasarflow_resilience.py  test_quasarflow_stub.py  test_user_repository.py  test_users.py  test_worker_tasks.py
(+379 files in other folders)
